--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,15 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.6",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "supertest": "^7.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
