--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "npx eslint ./src/** --fix",
     "start": "tsx watch src/server.ts",
     "initDB": "tsx src/database/initDB.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,8 @@
     "jest": "^29.7.0",
     "jest-mock": "^29.7.0",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
