--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.0.2"
