--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
