--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "types": ["react/next", "react-dom/next"]
+    "types": ["react/next", "react-dom/next", "node"]
+    
   },
   "include": ["./src"]
 }
